--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="yellow">#FFCC00</color>
+    <color name="green">#7CCCC7</color>
+    <color name="blue">#0080FF</color>
+    <color name="red">#FF0000</color>
 </resources>
