--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/blue</color>
     <color name="colorPrimaryDark">#005CB5</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">@color/green</color>
     <color name="yellow">#FFCC00</color>
     <color name="green">#7CCCC7</color>
     <color name="blue">#0080FF</color>
