--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/blue</color>
+    <color name="colorPrimary">@color/teal</color>
     <color name="colorPrimaryDark">#005CB5</color>
     <color name="colorAccent">@color/green</color>
     <color name="yellow">#FFCC00</color>
     <color name="green">#7CCCC7</color>
-    <color name="blue">#0080FF</color>
+    <color name="teal">#00BFA5</color>
     <color name="red">#FF0000</color>
 </resources>
