--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">@color/teal</color>
-    <color name="colorPrimaryDark">#005CB5</color>
+    <color name="colorPrimaryDark">#00796b</color>
     <color name="colorAccent">@color/green</color>
     <color name="yellow">#FFCC00</color>
     <color name="green">#7CCCC7</color>
